Added rotate block command